force-app/main/default/objects/Account/fields/ABN__c.field-meta.xml
<CustomField>
    <fullName>ABN__c</fullName>
    <description>Australian Business Number (11 digits) for the landlord or property management business. Required for tax invoice generation.</description>
    <label>ABN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>