force-app/main/default/objects/Account/fields/GST_Number__c.field-meta.xml
<CustomField>
    <fullName>GST_Number__c</fullName>
    <description>GST Number for the landlord or property management business. Required for tax invoice generation.</description>
    <label>GST Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>