force-app/main/default/objects/Account/fields/GST_Registered__c.field-meta.xml
<CustomField>
    <fullName>GST_Registered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this account is registered for GST. When true, rent invoices will include a 10% GST component on the GST_Amount__c field of each Rent_Payment__c record.</description>
    <label>GST Registered</label>
    <type>Checkbox</type>
</CustomField>