force-app/main/default/objects/Account/fields/Is_Landlord_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Landlord_Account__c</fullName>
    <description>Identifies landlord Person Accounts and drives partner sharing.</description>
    <defaultValue>false</defaultValue>
    <label>Is Landlord Account</label>
    <type>Checkbox</type>
</CustomField>