force-app/main/default/objects/Account/fields/Same_as_mailing_address__c.field-meta.xml
<CustomField>
    <fullName>Same_as_mailing_address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this address is the same as the mailing address.</description>
    <label>Same as Mailing Address</label>
    <type>Checkbox</type>
</CustomField>