force-app/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <description>Indicates the current lifecycle state of the person account — whether they are actively renting, no longer a tenant, or in the onboarding process.</description>
    <inlineHelpText>Select the current status of this person account. Use Active for current tenants, Inactive for former tenants, and Pending for applicants being onboarded.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>