force-app/main/default/objects/Account/fields/Total_Payments_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_Payments_Received__c</fullName>
    <description>Sum of all received payments (invoice and credit) across all tenancies linked to this account. Maintained by PaymentTrigger.</description>
    <label>Total Payments Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>