force-app/main/default/objects/Account/recordTypes/Landlord_Account.recordType-meta.xml
<RecordType>
    <active>true</active>
    <description>Person Account record type for landlords managing properties and tenancies.</description>
    <label>Landlord Account</label>
    <personType>true</personType>
</RecordType>