force-app/main/default/objects/Account/recordTypes/Tenant_Account.recordType-meta.xml
<RecordType>
    <active>true</active>
    <description>Person Account record type for tenants in the RentIt application.</description>
    <label>Tenant Account</label>
    <personType>true</personType>
</RecordType>